rss-puzzle/src/app/view/header/header.scss
.header{
    display: flex;
    justify-content: space-around;
    align-items: center;
    color: white;
    margin-bottom: 100px;

    .header-logo{
        position: relative;
        font-family: 'BungeeSpice-Regular';
    }

    .logout{
        cursor: pointer;
        display: none;
        width: 24px;
        height: 24px;
        background-image: url('../../../assets/img/logout.png');
        background-repeat: no-repeat;
        background-size: 100%;
    }

    .popup{
        position: absolute;
        left: 0;
        top: 0;
        width: 100%;
        height: 100%;
        border: 1px solid black;
        z-index: 100;
        background-color: rgba(0, 0, 0, 0.9);

        &-wrapper{        
            left: calc(50% - 250px);
            top: calc(50% - 150px);
            position: absolute;
            background-color: white;
            color: black;
            box-shadow: 0px 0px 100px -10px rgba(255, 255, 255, 0.2);
            border-radius: 10px;
            width: 500px;
            height: 300px;
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: center;
            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
        }
        &-title{
            max-width: 80%;
        }

        &-img{
            width: 64px;
            height: 64px;
        }
        &-btn-wrapper{
            display: flex;
            gap: 30px;
            
        }
        &-btn {
            cursor: pointer;
            background: transparent;
            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
            font-size: 18px;
            font-weight: bold;
            padding: 2px 15px;
            border-radius: 6px;
            border: none;
            color: white;
            background-color: rgb(29, 58, 217);
            transition: background-color 0.2s ease;
            @media (hover: hover){
                &:hover{
                    background-color: rgb(53, 77, 208);
                }
            }
            
        }
    }
    

}

